# Digital_Product_Bitcoin_Price_Prediction

./: README.md  requirements.txt
.devcontainer/: devcontainer.json
API_Bitcoin/: .dockerignore  Bitcoin_API_Docker_Deployment.ipynb  Dockerfile  README.md  demo_optional_date.py  github.txt  pyproject.toml  requirement.txt  test_coingecko_api.py  test_optional_date.py
API_Bitcoin/.github/workflows/: docker-image.yml
API_Bitcoin/app/: main.py
App/: Dockerfile  README.md  pyproject.toml  requirements.txt
App/app/: crypto_data.py  main.py  pages.py  requirements.txt  st_theme.py
App/coin/: __init__.py
ML_Model/: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
ML_Model/docs/: mkdocs.yml
ML_Model/docs/docs/: index.md
ML_Model/ml_model/: __init__.py  dataset.py  features.py  plots.py
ML_Model/ml_model/modeling/: predict.py  train.py
ML_Model/notebooks/: experiment-1.ipynb
