[project]
name = "app"
version = "0.1.0"
description = ""
authors = [
    {name = "Agam Singh Saini",email = "AgamSingh.Saini@student.uts.edu.au"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit (>=1.51.0,<2.0.0)",
    "plotly (>=6.4.0,<7.0.0)",
    "requests (>=2.0.0,<3.0.0)",
    "pandas (>=1.0.0,<3.0.0)",
    "yfinance (>=0.2.0,<1.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
