[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "ml_model"
version = "0.0.1"
description = "Data Product with Machine Learning"
authors = [
  { name = "Agam Singh Saini" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
dependencies = [
    "loguru",
    "mkdocs",
    "pip",
    "python-dotenv",
    "ruff",
    "tqdm",
    "typer",
    "requests (>=2.32.5,<3.0.0)",
    "scikit-learn (==1.5.1)",
    "pandas (==2.2.2)",
    "jupyterlab (==4.2.3)",
    "fastapi (==0.111.0)",
    "uvicorn (==0.30.1)",
    "joblib (==1.4.2)",
    "streamlit (==1.36.0)",
    "xgboost (==2.1.0)",
    "hyperopt (==0.2.7)",
    "lightgbm (==4.4.0)",
    "lime (==0.2.0.1)",
    "wandb (==0.17.4)",
    "seaborn (>=0.13.2,<0.14.0)",
    "plotly (>=6.4.0,<7.0.0)",
]
requires-python = "==3.11.4"


[tool.ruff]
line-length = 99
src = ["ml_model"]
include = ["pyproject.toml", "ml_model/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["ml_model"]
force-sort-within-sections = true

